# MYELIN-SR

./: .gitignore  CMakeLists.txt  Makefile  NOTICE.md  README.md  TESTING_REPORT.md  build.bat  build_log.txt  ckpt_summary.txt  compile_video.py  generate_stress_test.py  read_checkpoints.py  review_outputs.py  test_export.py  test_quick.py  test_results.txt  test_results_full.txt  training_review.txt  verify_output.txt  verify_phase1.py
artefacts/: architecture_decisions.md  codebase_analysis.md  feasibility_and_questions.md  implementation_plan.md  task.md  walkthrough.md
docs/: 1.58-bit_Ternary_Packing.md  Benchmarks.md  NSS_Architecture_Manifesto.md  Whitepaper_FPSAN_NSS.md
eval/: __init__.py  benchmark.py  temporal_benchmark.py
include/: nss_core.hpp
kaggle/eval/: benchmark.py  metrics.py
kaggle/train/: __init__.py  dataset.py  export_model.py  fpsan_conv2d.py  losses.py  requirements.txt
outputs/: eval_temp.py  training_log_r2.json
src/: dx12_compute_sandbox.cpp  main.cpp  myelin_compute.cso  myelin_compute.hlsl  nss_compute.hlsl  nss_core.cpp  reshade_myelin_addon.cpp
tests/: TEST_DOCUMENTATION.md  __init__.py  conftest.py  run_all_tests.py  test_architecture.py  test_metrics_loss.py  test_pipeline.py
tools/: build_temporal_notebook.py  export_hlsl_weights.py
train/: __init__.py  dataset.py  flow_model.py  fpsan_conv2d.py  kaggle_train.py  losses.py  model.py  myelin_sr_round2.ipynb  myelin_temporal.ipynb  temporal_dataset.py  temporal_loss.py  temporal_model.py  train.py  train_temporal.py  video_benchmark.py
